[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/Multiplayer.gd" type="Script" id=1]
[ext_resource path="res://scenes/HostServer.gd" type="Script" id=2]
[ext_resource path="res://scenes/Lobby.gd" type="Script" id=3]
[ext_resource path="res://scenes/JoinServer.gd" type="Script" id=4]

[node name="Lobby" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Multiplayer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Multiplayer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -36.0
margin_right = 36.0
margin_bottom = 14.0
text = "Multiplayer"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Buttons" type="VBoxContainer" parent="Multiplayer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -32.0
margin_right = 48.5
margin_bottom = 32.0
custom_constants/separation = 24
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HostServer" type="Button" parent="Multiplayer/Buttons"]
margin_right = 97.0
margin_bottom = 20.0
text = "Host Server"

[node name="JoinServer" type="Button" parent="Multiplayer/Buttons"]
margin_top = 44.0
margin_right = 97.0
margin_bottom = 64.0
text = "Join Server"

[node name="HostServer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="HostServer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.5
margin_right = 42.5
margin_bottom = 14.0
text = "Host Server"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="HostServer"]
margin_right = 42.0
margin_bottom = 20.0
text = "Back"

[node name="IP" type="HBoxContainer" parent="HostServer"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -38.5
margin_top = -20.0
margin_right = 38.5
margin_bottom = 20.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HostServer/IP"]
margin_top = 13.0
margin_right = 73.0
margin_bottom = 27.0
text = "IP Address:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpAddress" type="Label" parent="HostServer/IP"]
margin_left = 77.0
margin_top = 13.0
margin_right = 77.0
margin_bottom = 27.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="HBoxContainer" parent="HostServer"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -38.5
margin_top = 20.0
margin_right = 38.5
margin_bottom = 60.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HostServer/Port"]
margin_left = 21.0
margin_top = 13.0
margin_right = 51.0
margin_bottom = 27.0
text = "Port:"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Port" type="Label" parent="HostServer/Port"]
margin_left = 55.0
margin_top = 13.0
margin_right = 55.0
margin_bottom = 27.0
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clients" type="Control" parent="HostServer"]
anchor_top = 0.6
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Title" type="Label" parent="HostServer/Clients"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -58.0
margin_right = 58.0
margin_bottom = 14.0
text = "Connected Clients"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="List" type="VBoxContainer" parent="HostServer/Clients"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_top = 30.0
margin_right = 20.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartGame" type="Button" parent="HostServer"]
anchor_left = 0.5
anchor_top = 0.9
anchor_right = 0.5
anchor_bottom = 0.9
margin_left = -43.5
margin_top = -20.0
margin_right = 43.5
text = "Start Game!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JoinServer" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="JoinServer"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.5
margin_right = 42.5
margin_bottom = 14.0
text = "Join Server"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Back" type="Button" parent="JoinServer"]
margin_right = 42.0
margin_bottom = 20.0
text = "Back"

[node name="IP" type="HBoxContainer" parent="JoinServer"]
anchor_left = 0.5
anchor_top = 0.6
anchor_right = 0.5
anchor_bottom = 0.6
margin_left = -38.5
margin_top = -20.0
margin_right = 38.5
margin_bottom = 20.0
custom_constants/separation = 16
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="IpAddress" type="LineEdit" parent="JoinServer/IP"]
margin_right = 120.0
margin_bottom = 40.0
rect_min_size = Vector2( 120, 0 )
align = 2
placeholder_text = "IP Address"

[node name="Connect" type="Button" parent="JoinServer/IP"]
margin_left = 136.0
margin_right = 171.0
margin_bottom = 40.0
text = "Join"

[node name="CurrentState" type="Label" parent="JoinServer"]
anchor_left = 0.5
anchor_top = 0.3
anchor_right = 0.5
anchor_bottom = 0.3
margin_left = -20.0
margin_top = -14.0
margin_right = 20.0
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="Multiplayer/Buttons/HostServer" to="Multiplayer" method="_on_CreateServer"]
[connection signal="pressed" from="Multiplayer/Buttons/JoinServer" to="Multiplayer" method="_on_JoinServer"]
[connection signal="pressed" from="HostServer/Back" to="HostServer" method="_on_Back"]
[connection signal="pressed" from="HostServer/StartGame" to="HostServer" method="_on_StartGame"]
[connection signal="pressed" from="JoinServer/Back" to="JoinServer" method="_on_Back"]
[connection signal="pressed" from="JoinServer/IP/Connect" to="JoinServer" method="_on_Connect"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_http_response"]
